--- a/css/style.scss
+++ b/css/style.scss
@@ -220,6 +220,7 @@ main {
                 bottom: 8px;
                 text-align: center;
                 font-size: 11px;
+                pointer-events: none;
               }
             }
           }
