--- a/css/style.scss
+++ b/css/style.scss
@@ -245,26 +245,56 @@ main {
   background: pink;
 }
 
-/* ----- button ----- */
-// .btn-container {
-//   width: 1120px;
-//   margin: 16px auto 0;
-  #dl-btn {
-    all: unset;
-    display: block;
+/* ----- download button ----- */
+#dl-btn {
+  position: absolute;
+  bottom: 16px;
+  right: 752px;
+  padding: 4px 8px 0;
+  text-align: center;
+  font-size: 11px;
+  border-top: $border;
+  z-index: 5;
+  cursor: pointer;
+  &::before {
+    content: "";
     position: absolute;
-    bottom: 0;
-    right: 736px;
-    padding: 8px 16px;
-    background-color: white;
-    border: $border;
-    z-index: 5;
-    cursor: pointer;
-    &:hover {
-      background: $active-color;
-    }
+    top: -36px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 1px;
+    height: 24px;
+    background: $text-color;
+    
   }
-// }
+  &::after {
+    content: "";
+    position: absolute;
+    top: -12px;
+    left: 50%;
+    transform: translateX(-50%);
+    // 矢印の形
+    border-top: 6px solid $text-color;
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+  }
+  &:hover::before {
+    animation: line 1s infinite;
+  }
+  &:hover::after {
+    animation: arrow 1s infinite;
+  }
+}
+
+@keyframes line {
+  0%{height: 0}
+  90%{height: 24PX}
+}
+
+@keyframes arrow {
+  0%{top: -36px}
+  90%{top: -12px}
+}
 
 /* ----- action ----- */
 label.active {
