--- a/css/style.scss
+++ b/css/style.scss
@@ -250,27 +250,25 @@ main {
   position: absolute;
   bottom: 16px;
   right: 752px;
-  padding: 4px 8px 0;
-  text-align: center;
-  font-size: 11px;
-  border-top: $border;
+  width: 36px;
+  height: 52px;
   z-index: 5;
   cursor: pointer;
   &::before {
     content: "";
     position: absolute;
-    top: -36px;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
     width: 1px;
-    height: 24px;
+    height: 22px;
     background: $text-color;
     
   }
   &::after {
     content: "";
     position: absolute;
-    top: -12px;
+    top: 18px;
     left: 50%;
     transform: translateX(-50%);
     // 矢印の形
@@ -284,16 +282,24 @@ main {
   &:hover::after {
     animation: arrow 1s infinite;
   }
+  p {
+    @include box-center;
+    bottom: 0;
+    padding-top: 4px;
+    border-top: $border;
+    text-align: center;
+    font-size: 11px;
+  }
 }
 
 @keyframes line {
   0%{height: 0}
-  90%{height: 24PX}
+  90%{height: 22PX}
 }
 
 @keyframes arrow {
-  0%{top: -36px}
-  90%{top: -12px}
+  0%{top: 0}
+  90%{top: 18px}
 }
 
 /* ----- action ----- */
