--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,7 @@ main .component-list .component .workspace .shape-list ul li p {
   right: 752px;
   width: 36px;
   height: 52px;
+  font-size: 11px;
   z-index: 5;
   cursor: pointer;
 }
@@ -278,7 +279,7 @@ main .component-list .component .workspace .shape-list ul li p {
 #dl-btn:hover::after {
   animation: arrow 1s infinite;
 }
-#dl-btn p {
+#dl-btn p.svg {
   position: absolute;
   left: 0;
   right: 0;
@@ -287,7 +288,23 @@ main .component-list .component .workspace .shape-list ul li p {
   padding-top: 4px;
   border-top: 1px solid #333;
   text-align: center;
-  font-size: 11px;
+}
+#dl-btn p.svg-comment {
+  display: none;
+  opacity: 0;
+}
+#dl-btn:hover p.svg-comment {
+  display: block;
+  opacity: 1;
+  position: absolute;
+  bottom: 58px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: max-content;
+  padding: 6px 12px;
+  border-radius: 6px;
+  background: #e2e2e2;
+  animation: comment 0.5s;
 }
 
 @keyframes line {
@@ -304,6 +321,14 @@ main .component-list .component .workspace .shape-list ul li p {
   }
   90% {
     top: 18px;
+  }
+}
+@keyframes comment {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 /* ----- action ----- */
