--- a/css/style.scss
+++ b/css/style.scss
@@ -252,6 +252,7 @@ main {
   right: 752px;
   width: 36px;
   height: 52px;
+  font-size: 11px;
   z-index: 5;
   cursor: pointer;
   &::before {
@@ -263,7 +264,6 @@ main {
     width: 1px;
     height: 22px;
     background: $text-color;
-    
   }
   &::after {
     content: "";
@@ -282,13 +282,30 @@ main {
   &:hover::after {
     animation: arrow 1s infinite;
   }
-  p {
+  p.svg {
     @include box-center;
     bottom: 0;
     padding-top: 4px;
     border-top: $border;
     text-align: center;
-    font-size: 11px;
+  }
+  // ツールチップ
+  p.svg-comment {
+    display: none;
+    opacity: 0;
+  }
+  &:hover p.svg-comment {
+    display: block;
+    opacity: 1;
+    position: absolute;
+    bottom: 58px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: max-content;
+    padding: 6px 12px;
+    border-radius: 6px;
+    background: $active-color;
+    animation: comment .5s;
   }
 }
 
@@ -300,6 +317,11 @@ main {
 @keyframes arrow {
   0%{top: 0}
   90%{top: 18px}
+}
+
+@keyframes comment {
+  0%{opacity: 0}
+  100%{opacity: 1}
 }
 
 /* ----- action ----- */
