--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -196,7 +196,7 @@ main {
           /* ----- info ----- */
           .info {
             position: relative;
-            .info-introduction {
+            .info-comment {
               width: fit-content;
               max-width: 240px;
               position: absolute;
