--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -245,15 +245,19 @@ main {
               }
               img,
               div {
+                width: 30px;
+                height: 30px;
                 position: absolute;
                 top: 40%;
                 left: 50%;
                 transform: translate(-50%, -50%);
+                // labelをクリックさせるため
                 pointer-events: none;
               }
-              div {
-                width: 30px;
-                height: 30px;
+              div.hour-font-sample {
+                text-align: center;
+                font-size: 24px;
+                line-height: 30px;
               }
               .color-picker {
                 width: 96px;
