[add]ドットの大きさを変える機能を追加

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -213,7 +213,7 @@ main {
           }
         }
         
-        /* ----- shape radio ----- */
+        /* ----- design list ----- */
         .design-list {
           height: 132px;
           padding: 0 22px;
