[add]針オブジェクトの生成と、針をぐるぐる回す機能を追加

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -123,6 +123,9 @@ main {
       &:nth-child(3) .tab {
         left: 320px;
       }
+      &:nth-child(4) .tab {
+        left: 480px;
+      }
       /* ----- work space ----- */
       .workspace {
         width: 724px;
