[revise]レイアウト調整

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -138,13 +138,12 @@ main .component-list .component .workspace .workspace-top-container {
 }
 main .component-list .component .workspace .workspace-top-container .text-labels-container {
   padding: 24px 32px;
-  border-right: 1px dashed #333;
 }
 main .component-list .component .workspace .workspace-top-container .text-labels-container .text-label-container {
   display: flex;
 }
 main .component-list .component .workspace .workspace-top-container .text-labels-container .text-label-container label {
-  width: 120px;
+  width: 160px;
 }
 main .component-list .component .workspace .workspace-top-container .text-labels-container .text-label-container span {
   margin-left: 8px;
@@ -185,6 +184,7 @@ main .component-list .component .workspace .workspace-top-container .option-cont
 }
 main .component-list .component .workspace .workspace-top-container .info {
   position: relative;
+  border-left: 1px dashed #333;
 }
 main .component-list .component .workspace .workspace-top-container .info .info-comment {
   width: -moz-fit-content;
